# Ecom_chatbot

./: README.md  pyproject.toml  setup.py
ebot/: api.py  hooks.py  modules.txt
ebot/ebot/doctype/faqs/: faqs.json  faqs.py
ebot/ebot/doctype/support_chat_message/: support_chat_message.js  support_chat_message.json  support_chat_message.py  test_support_chat_message.py
ebot/ebot/page/support_live_chat/: support_live_chat.html  support_live_chat.js  support_live_chat.json
ebot/public/css/: chatbot.css
ebot/public/images/: 6262469931895473303.png:Zone.Identifier
ebot/public/js/: chatbot.js
